@@ -33,7 +33,7 @@ public class Mp4TrackField extends Mp4TagTextNumberField {
         super(Mp4FieldKey.TRACK.getFieldName(), trackValue);
 
         numbers = new ArrayList<Short>();
-        numbers.add(new Short("0"));
+        numbers.add(Short.valueOf("0"));
 
         String values[] = trackValue.split("/");
         switch (values.length) {
@@ -43,8 +43,8 @@ public class Mp4TrackField extends Mp4TagTextNumberField {
                 } catch (NumberFormatException nfe) {
                     throw new FieldDataInvalidException("Value of:" + values[0] + " is invalid for field:" + id);
                 }
-                numbers.add(new Short("0"));
-                numbers.add(new Short("0"));
+                numbers.add(Short.valueOf("0"));
+                numbers.add(Short.valueOf("0"));
                 break;
 
             case 2:
@@ -58,7 +58,7 @@ public class Mp4TrackField extends Mp4TagTextNumberField {
                 } catch (NumberFormatException nfe) {
                     throw new FieldDataInvalidException("Value of:" + values[1] + " is invalid for field:" + id);
                 }
-                numbers.add(new Short("0"));
+                numbers.add(Short.valueOf("0"));
                 break;
 
             default:
@@ -76,10 +76,10 @@ public class Mp4TrackField extends Mp4TagTextNumberField {
 
         super(Mp4FieldKey.TRACK.getFieldName(), String.valueOf(trackNo));
         numbers = new ArrayList<Short>();
-        numbers.add(new Short("0"));
+        numbers.add(Short.valueOf("0"));
         numbers.add((short)trackNo);
-        numbers.add(new Short("0"));
-        numbers.add(new Short("0"));
+        numbers.add(Short.valueOf("0"));
+        numbers.add(Short.valueOf("0"));
     }
 
     /**
@@ -91,10 +91,10 @@ public class Mp4TrackField extends Mp4TagTextNumberField {
     public Mp4TrackField(int trackNo, int total) {
         super(Mp4FieldKey.TRACK.getFieldName(), String.valueOf(trackNo));
         numbers = new ArrayList<Short>();
-        numbers.add(new Short("0"));
+        numbers.add(Short.valueOf("0"));
         numbers.add((short)trackNo);
         numbers.add((short)total);
-        numbers.add(new Short("0"));
+        numbers.add(Short.valueOf("0"));
     }
 
     /**
